--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
 ul, nav{
   list-style: none;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 a {
@@ -47,6 +49,8 @@ a {
   text-decoration: none;
   cursor: pointer;
   opacity: 0.9;
+
+  width: auto;
 }
 
 a:hover {
@@ -100,6 +104,7 @@ a.btn {
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
+  width: auto;
 }
 
 a.btn:hover {
@@ -216,7 +221,7 @@ input[type="search"] {
   }
 }
 
-@media all and (max-width:360px) {
+@media all and (min-width:900px) {
   header nav li{
     margin: 0 10px;
   }
